src/test/ui/parser/tag-variant-disr-non-nullary.stderr
error[E0658]: custom discriminant values are not allowed in enums with tuple or struct variants
  --> $DIR/tag-variant-disr-non-nullary.rs:2:11
   |
LL |     Red = 0xff0000,
   |           ^^^^^^^^ disallowed custom discriminant
LL |
LL |     Green = 0x00ff00,
   |             ^^^^^^^^ disallowed custom discriminant
LL |     Blue = 0x0000ff,
   |            ^^^^^^^^ disallowed custom discriminant
LL |     Black = 0x000000,
   |             ^^^^^^^^ disallowed custom discriminant
LL |     White = 0xffffff,
   |             ^^^^^^^^ disallowed custom discriminant
LL |     Other(usize),
   |     ------------ tuple variant defined here
LL |     Other2(usize, usize),
   |     -------------------- tuple variant defined here
   |
   = note: see issue #60553 <https://github.com/rust-lang/rust/issues/60553> for more information
   = help: add `#![feature(arbitrary_enum_discriminant)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
